--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
+        "start": "cross-env PORT=10888 HTTPS=true react-scripts start -- --no-cache",
         "build": "react-scripts build",
         "predeploy": "npm run build",
         "deploy": "vk-miniapps-deploy"
@@ -14,13 +14,13 @@
     "license": "MIT",
     "devDependencies": {
         "cross-env": "^5.2.1",
-        "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "husky": "^4.2.5",
         "prettier": "^2.0.5",
         "pretty-quick": "^2.0.1",
         "react-hot-loader": "^4.12.21",
-        "react-scripts": "^3.4.1"
+        "react-scripts": "^3.4.1",
+        "redux-devtools-extension": "^2.13.8"
     },
     "dependencies": {
         "@vkontakte/icons": "^1.21.0",
@@ -30,9 +30,15 @@
         "babel-eslint": "^10.1.0",
         "chalk": "^2.4.2",
         "core-js": "^3.6.5",
+        "eslint": "^6.6.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "path-to-regexp": "^6.1.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "react-redux": "^7.2.0",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0"
     },
     "browserslist": {
         "production": [
