--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env PORT=10888 HTTPS=true react-scripts start -- --no-cache",
+        "start": "cross-env PORT=10888 HTTPS=false react-scripts start -- --no-cache",
         "build": "react-scripts build",
         "predeploy": "npm run build",
-        "deploy": "vk-miniapps-deploy"
+        "deploy": "vk-miniapps-deploy",
+        "mock-server": "json-server ./public/mock.js -H 0.0.0.0 --watch"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
         "cross-env": "^5.2.1",
         "eslint-config-prettier": "^6.11.0",
         "husky": "^4.2.5",
@@ -23,15 +25,18 @@
         "redux-devtools-extension": "^2.13.8"
     },
     "dependencies": {
+        "@tinkoff/utils": "^2.1.2",
         "@vkontakte/icons": "^1.21.0",
         "@vkontakte/vk-bridge": "^2.2.2",
         "@vkontakte/vk-miniapps-deploy": "0.0.17",
         "@vkontakte/vkui": "^3.9.4",
-        "babel-eslint": "^10.1.0",
         "chalk": "^2.4.2",
         "core-js": "^3.6.5",
+        "date-fns": "^2.14.0",
         "eslint": "^6.6.0",
         "eslint-plugin-prettier": "^3.1.3",
+        "json-server": "^0.16.1",
+        "memoize-one": "^5.1.1",
         "path-to-regexp": "^6.1.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
