--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@vkontakte/vk-miniapps-deploy": "0.0.17",
         "@vkontakte/vkui": "^3.9.4",
         "chalk": "^2.4.2",
+        "classnames": "^2.2.6",
         "core-js": "^3.6.5",
         "date-fns": "^2.14.0",
         "eslint": "^6.6.0",
