--- a/package.json
+++ b/package.json
@@ -38,13 +38,16 @@
         "eslint-plugin-prettier": "^3.1.3",
         "json-server": "^0.16.1",
         "memoize-one": "^5.1.1",
-        "path-to-regexp": "^6.1.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
+        "react-router5": "^8.0.1",
         "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
+        "redux-router5": "^8.0.1",
+        "redux-thunk": "^2.3.0",
+        "router5": "^8.0.1",
+        "router5-plugin-browser": "^8.0.1"
     },
     "browserslist": {
         "production": [
