--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env PORT=10888 HTTPS=false react-scripts start -- --no-cache",
+        "start": "cross-env PORT=10888 HTTPS=true react-scripts start -- --no-cache",
         "build": "react-scripts build",
         "predeploy": "npm run build",
         "deploy": "vk-miniapps-deploy",
@@ -39,6 +39,7 @@
         "json-server": "^0.16.1",
         "memoize-one": "^5.1.1",
         "prop-types": "^15.7.2",
+        "query-string": "^6.12.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
