--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "redux-devtools-extension": "^2.13.8"
     },
     "dependencies": {
+        "@tinkoff/request-core": "^0.8.6",
+        "@tinkoff/request-plugin-protocol-http": "^0.10.11",
         "@tinkoff/utils": "^2.1.2",
         "@vkontakte/icons": "^1.21.0",
         "@vkontakte/vk-bridge": "^2.2.2",
