--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
         "core-js": "^3.6.5",
         "date-fns": "^2.14.0",
         "eslint": "^6.6.0",
+        "eslint-plugin-jest": "^23.13.2",
         "eslint-plugin-prettier": "^3.1.3",
         "json-server": "^0.16.1",
-        "memoize-one": "^5.1.1",
         "prop-types": "^15.7.2",
         "query-string": "^6.12.1",
         "react": "^16.13.1",
