--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "eslint-plugin-jest": "^23.13.2",
         "eslint-plugin-prettier": "^3.1.3",
         "json-server": "^0.16.1",
+        "petrovich": "^0.2.1",
         "prop-types": "^15.7.2",
         "query-string": "^6.12.1",
         "react": "^16.13.1",
