--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
         "@vkontakte/icons": "^1.21.0",
         "@vkontakte/vk-bridge": "^2.2.2",
         "@vkontakte/vk-miniapps-deploy": "0.0.17",
-        "@vkontakte/vkui": "^3.11.1",
+        "@vkontakte/vkui": "^3.11.3",
         "chalk": "^2.4.2",
         "classnames": "^2.2.6",
         "core-js": "^3.6.5",
         "date-fns": "^2.14.0",
+        "eruda": "^2.3.3",
+        "eruda-code": "^2.0.0",
+        "eruda-dom": "^2.0.0",
         "eslint": "^6.6.0",
         "eslint-plugin-jest": "^23.13.2",
         "eslint-plugin-prettier": "^3.1.3",
