--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
         "deploy": "vk-miniapps-deploy",
+        "deploy:canary": "REACT_APP_SERVICE_KEY=499cb097499cb097499cb0970e49efac294499c499cb09716895ad9834741967067efcc vk-miniapps-deploy",
         "postdeploy": "sh sentry-release.sh",
         "serve": "env NODE_TLS_REJECT_UNAUTHORIZED=0 PROXY_HTTP_PROTO=https PROXY_WS_PROTO=wss PROXY_HOST=localhost PROXY_PORT=10888 vk-tunnel",
         "devtools": "react-devtools"
