--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "eslint": "^6.6.0",
         "eslint-plugin-jest": "^23.13.2",
         "eslint-plugin-prettier": "^3.1.3",
+        "intersection-observer": "^0.11.0",
         "json-server": "^0.16.1",
         "petrovich": "^0.2.1",
         "prop-types": "^15.7.2",
